src/test/resources/api/WEB-INF/jsp/error/json/500.jsp
{
	"status":"500",
	"title":"Internal Server Error",
	"description": "The server encountered an internal error or misconfiguration and was unable to complete your request."
}
<%@ page contentType="application/json; charset=UTF-8"%>